--- a/sample_file_confusion_matrix.ipynb
+++ b/sample_file_confusion_matrix.ipynb
@@ -83,8 +83,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC\n",
-    "..."
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -110,7 +109,6 @@
    },
    "outputs": [],
    "source": [
-    "...\n",
     "# Load dataset\n",
     "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/iris.csv\"\n",
     "names = ['sepal-length', 'sepal-width', 'petal-length', 'petal-width', 'class']\n",
@@ -172,7 +170,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# shape\n",
     "print(dataset.shape)"
    ]
@@ -232,7 +229,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# head\n",
     "print(dataset.head(20))"
    ]
@@ -280,7 +276,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# descriptions\n",
     "print(dataset.describe())"
    ]
@@ -324,7 +319,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# class distribution\n",
     "print(dataset.groupby('class').size())"
    ]
@@ -368,7 +362,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# box and whisker plots\n",
     "dataset.plot(kind='box', subplots=True, layout=(2,2), sharex=False, sharey=False)\n",
     "pyplot.show()"
@@ -413,7 +406,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# histograms\n",
     "dataset.hist()\n",
     "pyplot.show()"
@@ -458,7 +450,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# scatter plot matrix\n",
     "scatter_matrix(dataset)\n",
     "pyplot.show()"
@@ -507,7 +498,6 @@
    },
    "outputs": [],
    "source": [
-    "...\n",
     "# Split-out validation dataset\n",
     "array = dataset.values\n",
     "X = array[:,0:4]\n",
@@ -555,7 +545,6 @@
     }
    ],
    "source": [
-    "...\n",
     "# Spot Check Algorithms\n",
     "models = []\n",
     "models.append(('LR', LogisticRegression(solver='liblinear', multi_class='ovr')))\n",
@@ -731,238 +720,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "4747"
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "4747"
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(32+3)\n",
-    "\n",
-    "2323 +2424"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
